--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </head>
 
     <!-- body -------------------------------------------------------------- -->
-    <body>
+    <body onload="onld();">
         <!-- ヘッダー -->
         <header class="header">
 
@@ -166,6 +166,12 @@
         <footer class="footer">
             COPYRIGHT © YAMACAFE
         </footer>
+
+        <script>
+            function onld() {
+                alert("このサイトはサンプルサイトです。実際に存在する会社のサイトではありません。")
+            }    
+        </script>
 
 
         <script>
